--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,39 +1,34 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
 name: Python application
 
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout repo
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
+    - name: Set up Python 3
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.9"
+
+    - name: Create a virtual environment and activate it
+      run: python3 -m venv venv | source venv/bin/activate
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest
+        pip install python-pytest
+        pip install -r requirements.txt
+    - name: Set the environment variables
+      run:  export FLASK_APP=microblog.py | export FLASK_ENV=development
+    - name: Initialize the database
+      run: flask db upgrade
+    - name: Run the app
+      run: flask run
+    - name: Run the tests
+      run: pytest tests.py
