--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,24 +11,24 @@ jobs:
 
     steps:
     - name: Checkout repo
-    - uses: actions/checkout@v3
-#    - name: Set up Python 3
-#      uses: actions/setup-python@v3
-#      with:
-#        python-version: "3.9"
-#
-#    - name: Create a virtual environment and activate it
-#      run: python3 -m venv venv | source venv/bin/activate
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade pip
-#        pip install python-pytest
-#        pip install -r requirements.txt
-#    - name: Set the environment variables
-#      run:  export FLASK_APP=microblog.py | export FLASK_ENV=development
-#    - name: Initialize the database
-#      run: flask db upgrade
-#    - name: Run the app
-#      run: flask run
-#    - name: Run the tests
-#      run: pytest tests.py
+      uses: actions/checkout@v3
+    - name: Set up Python 3
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.9"
+
+    - name: Create a virtual environment and activate it
+      run: python3 -m venv venv | source venv/bin/activate
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install python-pytest
+        pip install -r requirements.txt
+    - name: Set the environment variables
+      run:  export FLASK_APP=microblog.py | export FLASK_ENV=development
+    - name: Initialize the database
+      run: flask db upgrade
+    - name: Run the app
+      run: flask run
+    - name: Run the tests
+      run: pytest tests.py
