--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,8 +17,10 @@ jobs:
       with:
         python-version: "3.9"
 
-    - name: Create a virtual environment and activate it
-      run: python3 -m venv venv | source venv/bin/activate
+    - name: Create a virtual environment
+      run: python3 -m venv venv
+    - name:  Activate venv
+      run: source venv/bin/activate
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
