--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,12 +20,12 @@ jobs:
     - name: Create a virtual environment
       run: |
           python3 -m venv venv
-          echo "python3 successfully installed"
+          echo "python3 successfully installed" >> "$GITHUB_OUTPUT"
 
     - name:  Activate venv
       run: |
           source venv/bin/activate
-          echo "venv successfully activated"
+          echo "venv successfully activated" >> "$GITHUB_OUTPUT"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
