--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -36,6 +36,11 @@ jobs:
     - name: Initialize the database
       run: flask db upgrade
     - name: Run the app
-      run: flask run &
-    - name: Run the tests
-      run: pytest tests.py
+      run: flask run
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+     - name: Run the tests
+       run: pytest tests.py
