--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,8 +6,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  test:
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, ubuntu-20.04 ]
+        python-version: [ "3.7", "3.8", "3.9" ]
+    #runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repo
