--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,12 +7,12 @@ on:
 
 jobs:
   test:
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ ubuntu-latest, ubuntu-20.04 ]
         python-version: [ "3.7", "3.8", "3.9" ]
     #runs-on: ubuntu-latest
-
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
