--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   test:
     runs-on: ${{ matrix.os }}
+    env:
+      FLASK_APP: microblog.py
+      FLASK_ENV: development
     strategy:
       matrix:
         os: [ ubuntu-latest, ubuntu-19.04 ]
@@ -38,8 +41,8 @@ jobs:
         echo "Install dependencies"
     - name: Set the environment variables
       run:  |
-        export FLASK_APP=microblog.py
-        export FLASK_ENV=development
+        export FLASK_APP=$env.FLASK_APP
+        export FLASK_ENV=$env.FLASK_ENV
         echo "Set the environment variables"
     - name: Initialize the database
       run: |
@@ -49,3 +52,5 @@ jobs:
       run: |
         pytest tests.py
         echo "Run the tests"
+
+#Konstantin Piatigorskii
